ffmpeg/zlib-1.2.8/configure.log
--------------------
./configure
Fri Jul 15 01:57:02 UTC 2016
Checking for gcc...
=== ztest15638.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest15638.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest15638.c ===
int foo() { return 0; }
===
gcc -c -fPIC ztest15638.c

Checking for shared library support...
=== ztest15638.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -w -c -fPIC -fPIC ztest15638.c
gcc -shared -Wl,-soname,libz.so.1,--version-script,zlib.map -fPIC -fPIC -o ztest15638.so ztest15638.o
Building shared library libz.so.1.2.8 with gcc.

=== ztest15638.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15638.c
Checking for off64_t... Yes.
Checking for fseeko... Yes.

=== ztest15638.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -fPIC -D_LARGEFILE64_SOURCE=1 -o ztest15638 ztest15638.c
Checking for strerror... Yes.

=== ztest15638.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15638.c
Checking for unistd.h... Yes.

=== ztest15638.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15638.c
Checking for stdarg.h... Yes.

=== ztest15638.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15638.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest15638.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -fPIC -D_LARGEFILE64_SOURCE=1 -o ztest15638 ztest15638.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest15638.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15638.c
Checking for return value of vsnprintf()... Yes.

=== ztest15638.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15638.c
Checking for attribute(visibility) support... Yes.

ALL = static shared all64
AR = ar
ARFLAGS = rc
CC = gcc
CFLAGS = -fPIC -D_LARGEFILE64_SOURCE=1 -DHAVE_HIDDEN
CPP = gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = gcc -shared -Wl,-soname,libz.so.1,--version-script,zlib.map
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -fPIC -fPIC -D_LARGEFILE64_SOURCE=1 -DHAVE_HIDDEN
SHAREDLIB = libz.so
SHAREDLIBM = libz.so.1
SHAREDLIBV = libz.so.1.2.8
STATICLIB = libz.a
TEST = all teststatic testshared test64
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Linux
--------------------


--------------------
./configure --enalbe-static
Fri Jul 15 01:58:11 UTC 2016
unknown option: --enalbe-static
./configure --help for help
** ./configure aborting.
--------------------


--------------------
./configure --help
Fri Jul 15 01:58:21 UTC 2016
usage:
  configure [--const] [--zprefix] [--prefix=PREFIX]  [--eprefix=EXPREFIX]
    [--static] [--64] [--libdir=LIBDIR] [--sharedlibdir=LIBDIR]
    [--includedir=INCLUDEDIR] [--archs="-arch i386 -arch x86_64"]
--------------------
./configure --static
Fri Jul 15 01:58:38 UTC 2016
Checking for gcc...
=== ztest15960.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest15960.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest15960.c ===
int foo() { return 0; }
===
gcc -c -fPIC ztest15960.c

Building static library libz.a version 1.2.8 with gcc.

=== ztest15960.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15960.c
Checking for off64_t... Yes.
Checking for fseeko... Yes.

=== ztest15960.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -fPIC -D_LARGEFILE64_SOURCE=1 -o ztest15960 ztest15960.c
Checking for strerror... Yes.

=== ztest15960.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15960.c
Checking for unistd.h... Yes.

=== ztest15960.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15960.c
Checking for stdarg.h... Yes.

=== ztest15960.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15960.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest15960.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -fPIC -D_LARGEFILE64_SOURCE=1 -o ztest15960 ztest15960.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest15960.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15960.c
Checking for return value of vsnprintf()... Yes.

=== ztest15960.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest15960.c
Checking for attribute(visibility) support... Yes.

ALL = static all64
AR = ar
ARFLAGS = rc
CC = gcc
CFLAGS = -fPIC -D_LARGEFILE64_SOURCE=1 -DHAVE_HIDDEN
CPP = gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = gcc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -fPIC -fPIC -D_LARGEFILE64_SOURCE=1 -DHAVE_HIDDEN
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic test64
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Linux
--------------------


--------------------
./configure --static
2016年 7月16日 星期六 11时43分46秒 CST
Checking for gcc...
=== ztest97224.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest97224.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest97224.c ===
int foo() { return 0; }
===
gcc -c -fPIC ztest97224.c

Building static library libz.a version 1.2.8 with gcc.

=== ztest97224.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -fPIC -D_LARGEFILE64_SOURCE=1 ztest97224.c
ztest97224.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/sys/_types/_off_t.h:30:25: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest97224.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
gcc -fPIC -o ztest97224 ztest97224.c
Checking for fseeko... Yes.

=== ztest97224.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -fPIC -o ztest97224 ztest97224.c
Checking for strerror... Yes.

=== ztest97224.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -fPIC ztest97224.c
Checking for unistd.h... Yes.

=== ztest97224.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -fPIC ztest97224.c
Checking for stdarg.h... Yes.

=== ztest97224.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -fPIC ztest97224.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest97224.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -fPIC -o ztest97224 ztest97224.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest97224.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -fPIC ztest97224.c
Checking for return value of vsnprintf()... Yes.

=== ztest97224.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -fPIC ztest97224.c
Checking for attribute(visibility) support... Yes.

ALL = static
AR = libtool
ARFLAGS = -o
CC = gcc
CFLAGS = -fPIC -DHAVE_HIDDEN
CPP = gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = gcc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -fPIC -fPIC -DHAVE_HIDDEN
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Darwin
--------------------


